--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.1.5-SNAPSHOT</version>
+            <version>2.1.4</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
