小傅哥,feat：vo2dto 各类情况，案例测试，可以安装 idea 插件 vo2dto 进行使用 v2.4.5 版本

--- a/lottery-interfaces/pom.xml
+++ b/lottery-interfaces/pom.xml
@@ -121,6 +121,14 @@
         </dependency>
         <!-- 业务包 end-->
 
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
