--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
                 <version>2.3.0</version>
             </dependency>
 
-            <!-- 自研路由组件，下载构建：https://codechina.csdn.net/KnowledgePlanet/db-router-spring-boot-starter -->
+            <!-- 自研路由组件，下载构建：https://gitcode.net/KnowledgePlanet/db-router-spring-boot-starter -->
             <dependency>
                 <groupId>cn.bugstack.middleware</groupId>
                 <artifactId>db-router-spring-boot-starter</artifactId>
